# Useful-Tiny-Scripts

./: README.md  anki_deutsch_adder.py  anki_deutsch_card_adder.py  anki_deutsch_deu_to_eng_card_adder.py  check_subfiles_in_resilio_sync.sh  check_subfiles_in_snycthing.sh  compressed_files_diff_tool.sh  createLauncher.sh  delete_empty_subfolders.sh  disk_rsync_backup_tool.sh  dynamic_runner.sh  email_crawler_from_urls.py  http_in_downloads_folder.sh  line_count_speedometer.sh  pdf_merger_with_bookmarks  replace_variables_in_text.py  rsync_to_server.sh  safe_git_add.sh  script_for_tumlive_video_recording.sh  shorten_activate_project_for_python.sh  similar_images_reviewer.sh
anki_card_tooling/: .gitignore  .pre-commit-config.yaml  anki_deutsch_card_adder.py  anki_deutsch_deu_to_eng_card_adder.py  justfile  pyproject.toml
anki_card_tooling/anki_card_tooling/: anki_deutsch_deu_to_eng_card_adder.py
anki_card_tooling/scripts/: deu_to_eng_card_adder.py  generic_card_adder.py  shared.py
job_info_retriever/: .gitignore  build.sh  job_info_retriever.py
pdf_merge_with_bookmarks/: build.sh  main.py
pdf_merge_with_bookmarks/pdfs/: .gitignore
prepare_email_templates_for_chair_members_on_mail_tum_de/: README.md  build.sh  chair_members.csv  main.py
tv_static_effects/: README.md  bw_static_effect.sh  rgb_static_effect.sh
