[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.14"
name = "anki-card-tooling"
dynamic = ["version"]
dependencies = [
    "ruff==0.14.11",
    "pydantic==2.12.5",
    "ty==0.0.11",
    "prek>=0.3.0",
]


[tool.setuptools]
packages = []
py-modules = []
